# youtube-live-transcript-archiver

./: .gitignore  AGENTS.md  README.md  analysis.ipynb  analysis_twitch.ipynb  config.py  flow_draft.ipynb  main.py  modular_test.py  parsers.py  processed_videos.txt  pyproject.toml  requirements.txt  storage.py  tests.py  twitch_client.py  youtube_client.py
src/: analyze.py  export.py  ingest.py  parsers.py  reporting.py  utils.py  video.py
tests/: conftest.py
tests/fixtures/: sample_chat.json  sample_transcript.vtt  test_config.py
tests/integration/: test_full_pipeline.py  test_new_features.py
tests/unit/: test_parsers.py  test_report_generation.py
